2004-10-02  Douglas Bates  <bates@bates1-home>

	* R/tripletMatrix.R: Force a require(lattice) for the image methods.

2004-06-15  Douglas Bates  <bates@bates7>

	* man/trMatrix-class.Rd: Escape the % chars in .Rd files.

2004-04-20  Douglas Bates  <bates@stat.wisc.edu>

	* src/Makefile.win ($(SHLIB)): Modifications per Uwe Ligges.

2004-04-19  Douglas Bates  <bates@stat.wisc.edu>

	* src/ssclme.c (ssclme_update_mm): fix logic error in
	ssclme_update_mm

2004-04-18  Douglas Bates  <bates@stat.wisc.edu>

	* src/ssclme.c (ssclme_coef, ssclme_coefGets): Create consistency
	in the order of unconstrained and constrained parameters.
	(ssclme_gradient): Added the gradients (not yet correct for
	multidimensional, unconstrained case).

2004-04-14  Douglas Bates  <bates@stat.wisc.edu>

	* src/ssclme.c (ssclme_EMsteps): Fix logic in REML update

	* src/Makefile.win: Remove unneeded ranlib call

2004-04-12  Douglas Bates  <bates@stat.wisc.edu>

	* DESCRIPTION (Version): New release

	* src/Makefile.win: Update Makefile.win to umfpack removal.

2004-04-05  Douglas Bates  <bates@bates2_home>

	* src/triplet_to_col.c: Create triplet_to_col as a native
	function, not the version from umfpack.  There were problems with
	the configuration of UMFPACK for 64-bit processors and there was
	only one umfpack routine being used so I moved it here.

2004-04-04  Douglas Bates  <bates@bates2_home>

	* src/ssclme.c (ssclme_variances): New function.

2004-03-28  Douglas Bates  <bates@bates2_home>

	* src/ssclme.c (ssclme_fitted): Added function.

2004-03-27  Douglas Bates  <bates@bates2_home>

	* src/ssclme.c (ssclme_transfer_dimnames): Add new function to
	store the dimnames in the XtX and bVar slots
	(ssclme_update_mm): Change the dimensions of the bVar slot
	components and the returned value from ssclme_ranef.

2004-03-18  Douglas Bates  <bates@stat.wisc.edu>

	* R/{pdMat.R,pdIdent.R,pdLogChol.R,pdMatrixLog.R,pdNatural.R},
	  src/{pdMat.c,pdIdent.c,pdLogChol.c,pdNatural.c},