@@ -1,6 +1,6 @@
 Package: Matrix
-Version: 0.8-15
-Date: 2004-10-02
+Version: 0.8-16
+Date: 2004-10-04
 Title: A Matrix package for R
 Author: Douglas Bates <bates@stat.wisc.edu>
 Maintainer: Douglas Bates <bates@stat.wisc.edu>
@@ -8,7 +8,6 @@ Description: Classes and methods for numerical linear algebra
     using Lapack, LDL, and Metis.
 Depends: R (>= 2.0.0), methods
 Imports: graphics, stats, lattice, grid
-Suggests: lattice
 SaveImage: no
 LazyLoad: yes
 LazyData: yes
